[gd_scene load_steps=2 format=3 uid="uid://cr0s0dp83ai3u"]

[ext_resource type="Script" path="res://Boids.gd" id="1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")
start_distance_from_center = 237

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -130.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Coherence"

[node name="Coherence" type="HSlider" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.3

[node name="VBoxContainer2" type="VBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Separation"

[node name="Separation" type="HSlider" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.3

[node name="VBoxContainer3" type="VBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Alignment"

[node name="Alignment" type="HSlider" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.3

[node name="VBoxContainer4" type="VBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Target"

[node name="Target" type="HSlider" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.3

[node name="HBoxContainer2" type="HBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Range to other boids"

[node name="Distance" type="HSlider" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 200.0
max_value = 2000.0
step = 50.0
value = 500.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Boids speed"

[node name="Speed" type="HSlider" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 100.0
max_value = 5000.0
step = 50.0
value = 2000.0

[node name="VBoxContainer3" type="VBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
text = "Boids steering speed"

[node name="Steering Speed" type="HSlider" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="Pause" type="Button" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pause/Resume"

[node name="CheckButton" type="CheckButton" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Debug"

[node name="DebugHUD" type="CanvasLayer" parent="."]

[connection signal="value_changed" from="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/Coherence" to="." method="_on_coherence_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer2/Separation" to="." method="_on_separation_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer3/Alignment" to="." method="_on_alignment_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer4/Target" to="." method="_on_target_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer/Distance" to="." method="_on_distance_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer2/Speed" to="." method="_on_speed_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer3/Steering Speed" to="." method="_on_steering_speed_value_changed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/Pause" to="." method="_on_pause_pressed"]
[connection signal="toggled" from="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2/CheckButton" to="." method="_on_check_button_toggled"]
